# UnclePy

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  requirements.txt
TicTacToe/TTTCppVers/: TTTCppVers.sdf  TTTCppVers.sln
TicTacToe/TTTCppVers/TTTCppVers/: ReadMe.txt  TTTCppVers.cpp  TTTCppVers.vcxproj  TTTCppVers.vcxproj.filters  stdafx.cpp
TicTacToe/TTTCppVers/ipch/TTTCPPVERS-b3aab633/: TTTCPPVERS-1a1be02b.ipch
UnclePy/src/: basicgrid.py  main.py  snake.py
UnclePy/tests/: testgrid.py
docs/: conf.py
docs/source/: conf.py  index.rst
src/: basicgrid.py  config.py  food.py  main.py  manager.py  run.py  snake.py
src/exceptions/: bounds.py  direction.py  grid_exceptions.py  snake_exceptions.py  speednegative.py  twist.py
src/grid/: cell.py  grid.py  structure.py
src/tests/: __init__.py  test_food.py  test_grid.py  test_snake.py  testgrid.py
tests/: testgrid.py  testsnake.py
three_d/: CMakeLists.txt  main.cpp
three_d/graphics/: CMakeLists.txt  manager.cpp  manager.h
two_d/: config.py  food.py  manager.py  run.py  snake.py
two_d/exceptions/: grid_exceptions.py  snake_exceptions.py
two_d/grid/: cell.py  grid.py
two_d/tests/: test_food.py  test_grid.py  test_snake.py
